tetrate/tis1001/.chainsaw-test/good-resource.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: valid-host-virtual-service
spec:
  hosts:
  - "existing-service.example-namespace.svc.cluster.local"
  http:
  - route:
    - destination:
        host: "unknown-service.example-namespace.svc.cluster.local"
